<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_15"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dimen_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/element_exam_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_exam_hint_name"
            android:padding="@dimen/dimen_15"
            style="@style/MyEditText"/>

        <include layout="@layout/layout_general_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/element_exam_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:hint="@string/add_exam_hint_weight"
                android:inputType="number"
                android:padding="@dimen/dimen_15"
                style="@style/MyEditText"/>

            <EditText
                android:id="@+id/element_exam_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:hint="@string/add_exam_hint_quantity"
                android:inputType="number"
                android:padding="@dimen/dimen_15"
                style="@style/MyEditText"/>

        </LinearLayout>

        <include layout="@layout/layout_general_divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/element_exam_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:paddingTop="@dimen/dimen_15"
                android:paddingBottom="@dimen/dimen_15"
                android:enabled="false"
                android:text="@string/add_exam_checkbox"
                android:textSize="@dimen/text_16" />

            <ImageView
                android:id="@+id/element_exam_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen_15"
                android:padding="@dimen/dimen_10"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_trash"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>